aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
  - port: 80
    targetPort: 8080
